Implement pasting of data with storedPut rather than moving a tempfile.

This fixes the wrong permissions on the created file, and will make it
possible to fix undo too (not done yet).

Had to deprecate methods that return a CopyJob pointer, but the main
method pasteClipboard is unchanged.

Old QT_NO_MIMECLIPBOARD code removed, unmaintainable and wrong.

BUG: 231420
FIXED-IN: 4.7